--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Star Wars RPG</title>
+	<title>Crystals Collector!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="./assets/javascript/game.js"></script>
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-
+	<div class="col-md-4">
+		<div class="row">
+			<header>
+				<h1>Crystals Collector!</h1>
+			</header>
+		</div>
+		<div class="row" id="instructions">
+			<p>You will be given a random number at the start of the game</p>
+			<p>There will be four crtystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
+			<p>You win the game by matching your total score to a random number, you lose the game if your score goes above the random number.</p>
+			<p>The value of each crystal is hidden from you until you click on it.</p>
+			<p>Each time when the game starts, the game will change the values of each crystal.</p>
+		</div>
+		<div class="row">
+			<div class="col-md-4" id="matchNumbers">
+				<h2>Number To Get:
+					<span id= "randomNumber"></span>
+				</h2>
+			</div>
+			<div class="col-md-4" id="winLoss">
+			<h2>Wins:
+				<span id= "numberWins"></span>
+				</br>
+				Losses: 
+				<span id= "numberLosses"></span>
+			</h2>
+			</div>
+		</div>
+		<div class="row" id="gems-row">
+			<img src="assets/images/bluegem.jpg" id="gem1" alt="Blue Gem" width="75" height="75">
+			<img src="assets/images/greengem.jpg" id="gem2" alt="Green Gem" width="75" height="75">
+			<img src="assets/images/redgem.jpg" id= "gem3" alt="Red Gem" width="75" height="75">
+			<img src="assets/images/purplegem.jpg" id= "gem4" alt="Purple Gem" width="75" height="75">			
+		</div>
+		<div class="row" id="total">
+			<h2>Your total score is:
+				<span id="finalTotal"></span>
+			</h2>
+		</div>
+	</div>	
 </body>
 </html>
